--- a/responsive.css
+++ b/responsive.css
@@ -14,4 +14,84 @@
     flex-direction: row;
     align-items: center;
  } 
+
+ .banner{
+    flex-direction: column;
 }
+.banner-content{
+    max-width: 100%;
+}
+.banner-content h1{
+    font-size: 32px;
+    font-weight: 800;
+    color: rgb(255, 255, 255);
+}
+
+.btn-primary{
+    border: none;
+    border-radius:40px ;
+    background-color:rgb(230, 83, 60);
+    padding: 8px 20px 8px 20px;
+    font-weight: 500;
+    font-size: 12px;
+    color: white;
+    margin-right: 20px;
+    margin-left: 30px;
+    margin-top: 20px;
+}
+.btn-scondary{
+    border-radius:40px ;
+    border:1px solid white;
+    background-color:transparent;
+    padding: 8px 20px 8px 20px;
+    font-weight: 500;
+    font-size: 12px;
+    color: white;
+    margin-top: 20px;   
+}
+.banner-img{
+    max-width: 100%;
+    margin-top: 40px;
+    /* border: 2px solid blue; */
+    position: relative;
+}
+.img-btn1{
+    position: absolute;
+    top: 90px;
+    left: 200px;
+    width: 130px;
+    /* height: 120px; */
+    padding: 10px;
+    box-sizing: border-box;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 12px;
+    backdrop-filter: blur(20px);
+    background: rgba(255, 255, 255, 0.1);
+ }
+ .img-btn1 h4{
+    color: white;
+    font-weight: 700;
+    font-size: 32px;
+}
+.banner-img p{
+    font-size: 10px;
+    margin: 5px;
+    text-align: left;
+}
+
+.img-btn2{
+    position: absolute;
+    left: 10px;
+    bottom: 220px;
+    box-sizing: border-box;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 12px;
+    backdrop-filter: blur(20px);
+    background: rgba(255, 255, 255, 0.1);
+    display: flex;
+    padding: 20px;
+    text-align: center;
+}
+
+}
+
