--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,7 @@ header{
 .banner{
     max-width: 80%;
     margin: 40px auto;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     display: flex;
     justify-content: space-between;
 }
@@ -98,7 +98,7 @@ header{
     margin-top: 100px;
     /* margin-left: 50px; */
    padding-bottom: 20px;
-    border: 2px solid green; 
+    /* border: 2px solid green;  */
     text-align: left;
 }
 .banner-content h1{
@@ -114,7 +114,7 @@ header{
 }
 .banner-img{
     max-width: 80%;
-    border: 2px solid blue;
+    /* border: 2px solid blue; */
     position: relative;
 }
 .banner-img p{
