habit section responsive

--- a/styles.css
+++ b/styles.css
@@ -168,7 +168,7 @@ header{
     max-width: 80%;
     min-height: 300px;
     margin: 80px auto;
-    border: 2px solid blue;
+    /* border: 2px solid blue; */
     text-align: center;
 }
 .habits h1{
@@ -185,7 +185,7 @@ header{
     height: 300px;
     padding: 10px;
     margin: 40px;
-    border: 2px solid blue;
+    /* border: 2px solid blue; */
 }
 .card h4{
     color: white;
