--- a/styles.css
+++ b/styles.css
@@ -196,3 +196,35 @@ header{
     border: 2px solid gray;
     border-radius: 50%;
 }
+/* run */
+.run{
+    max-width: 80%;
+    min-height: 370px;
+    margin: 80px auto;
+    padding: 40px;
+    /* border: 2px solid blue; */
+    border-radius: 18px;
+    background: rgb(34, 34, 34);
+    display: flex;
+    justify-content: space-between;
+}
+.run-content{
+   max-width: 366px;
+   /* border: 2px solid green; */
+}
+.run-content h1{
+    font-size: 36px;
+    font-weight: 900;
+    color: white;
+}
+.run-img{
+  width:366px;
+  /* background-color: aqua; */
+  background-image: url("./images/run.jpg");
+  background-repeat: no-repeat;
+  background-position: center ;
+  background-size: cover;
+  /* border: 2px solid green; */
+  border-radius: 10px;
+  
+}
