--- a/responsive.css
+++ b/responsive.css
@@ -133,6 +133,7 @@
   /* bmi responsive */
   .bmi-content{
     flex-direction: column;
+    padding-bottom: 20px;
   }
   .bmi-heading{
     max-width: 600px;
@@ -173,6 +174,17 @@
 }
 .input-content{
     grid-template-columns: repeat(2, 1fr);
+}
+
+/* team */
+.team-img{
+    grid-template-columns:repeat(1, 1fr);
+    margin-bottom: 20px;
+}
+.team h1{
+    color: white;
+    font-size: 36px;
+    font-weight: 900;
 }
 
 }
