--- a/styles.css
+++ b/styles.css
@@ -255,6 +255,7 @@ header{
     display: flex;
     justify-content: space-around;
     align-items: center;
+    padding-bottom: 20px;
 }
 .bmi-content h3{
     margin-bottom: 40px;
@@ -326,3 +327,53 @@ table{
 .input-textarea{
     margin: 10px;
 }
+
+/* meet our team */
+.team{
+    max-width: 80%;
+    margin: 80px auto;
+    /* border: 2px solid green; */
+    text-align: center;
+}
+.team h1{
+    color: white;
+    font-size: 48px;
+    font-weight: 900;
+}
+.team-img{
+    max-width: 100%;
+    /* border: 2px solid yellow; */
+    margin: 100px auto;
+    margin-top: 40px;
+    padding: 10px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    border-radius: 8px;
+    background: rgba(255, 255, 255, 0.1);
+}
+.grid-img{
+    position: relative;
+}
+
+.grid-img img{
+    width: 100%;
+    height: 100%;
+    border-radius: 8px;
+    object-fit: cover;
+}
+.grid-title{
+    position: absolute;
+   bottom: 8px;
+   left: 10px;
+}
+.grid-title h4{
+    color: white;
+    font-size: 20px;
+  font-weight: 700;
+}
+.grid-title p{
+    text-align: left;
+}
+
+
