--- a/styles.css
+++ b/styles.css
@@ -228,7 +228,74 @@ header{
   border-radius: 10px;
   
 }
-
+/* unique section */
+.unique{
+    max-width: 80%;
+    /* min-height: 500px; */
+    margin: 120px auto; 
+    /* border: 2px solid green; */
+    align-items: center;  
+}
+.unique-title{
+    max-width: 60%;
+    margin: 0 auto;
+    text-align: center;
+}
+.unique-title h1{
+  font-size: 48px;
+  font-weight: 800;
+  color: white;
+}
+.unique-card{
+    width: 100%;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    /* border: 2px solid blue;  */
+}
+.card-box{
+    max-width: 30%;
+    box-shadow: 3px 5px 10px rgba(255, 255, 255, 0.5);
+    border-radius: 8px;
+    /* margin-right: 15px; */
+    background: rgb(34, 34, 34);
+    /* border: 2px solid yellow; */
+    padding: 15px; 
+    text-align: center;
+}
+.card-box h3{
+   font-size: 36px;
+   font-weight: 600;
+   color: white;
+}
+.card-box img{
+    width: 100%;
+   
+    border-radius: 8px;
+    object-fit: cover;
+}
+.box-button{
+    color: white;
+    font-size: 18px;
+    font-weight: 400;
+    background-color: black;
+    padding: 10px;
+    border: 2px solid rgb(129, 115, 115);
+    border-radius: 8px;
+    margin-top: 20px;
+}
+.btn-box{
+    border: none;
+    border-radius:40px ;
+    background-color:rgb(230, 83, 60);
+    padding: 16px 40px 16px 40px;
+    font-weight: 600;
+    font-size: 18px;
+    color: white;
+    margin-left: 500px;
+}
 /* BMI Calculator */
 .bmi-heading{
     max-width: 600px;
